src/test/deca/context/valid/created/decl_var/decl_var_with_class.deca
// Description :
// simple declaration for a variable of type A
//
// Resultats :
//  nothing happens, declaration of a variable of type A

class A {

}

{
	A a;
}
