src/test/deca/context/invalid/created/multiple_definition/fields.deca
// Description:
//      Multiple definition of a field
// Resultats:
//      Error Ligne 8 : Field already definid in this class

class A{
    int x;
    int x;
}